BackEnd_Learn/kotlin/entity/src/main/kotlin/com/example/entity/error/ErrorResponse.kt
package com.example.entity.error

class ErrorResponse {
}